--- a/requirements.txt
+++ b/requirements.txt
@@ -14,3 +14,7 @@ sqlparse==0.4.2
 tzdata==2022.1
 urllib3==1.26.9
 whitenoise==6.0.0
+dj-database-url==0.5.0
+dj-static==0.0.6
+psycopg2==2.7.7
+static3==0.7.0
